static/css/base.css
html {
    height: 100%;
    scroll-behavior: smooth;
    overflow-x: hidden;
    min-height: 100vh;
    position: relative;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Oxygen', sans-seri;
    color: #000000;
    background-color: #fafafa;
    font-size: 1.2rem;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.container {
    margin-top: 4rem;
}

.main-content {
    margin-top: 3rem;
    margin-bottom: 1rem;
    height: fit-content;
    flex: 1 0 auto;
}

.spacing {
    margin: 1rem;
    padding: 1rem;
}


h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Acme', sans-serif;
}

#purchase-form,
.login-form {
    border: 1px solid #000000 !important;
    border-radius: 5px;
    box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
}



/*************************Navigation*/

.menu-icons-div {
    position: relative;
    left: 48%;
}

nav {
    background-color: #000000;
}

.nav-links-ul {
    flex-direction: initial;
    align-self: end;
}

.nav-links-ul li {
    padding-left: 1.2rem;
}

.icon-div {
    padding-right: 1.5rem;
}

.logo-div {
    padding-left: 1rem !important;
    height: 3rem;
}

header,
.dropdown-menu {
    background-color: #000000;
}

.dropdown-item {
    color: #fafafa;
}

.nav-link {
    text-transform: uppercase;
    font-weight: 600;
    font-size: 1.2rem;
    text-shadow: 2px 2px #000000;
    padding: 0.5rem;
}

.nav-link img {
    width: 3rem;
    height: 3rem;
    border: none;
}

.navbar-toggler {
    background-color: #fafafa;
    color: #000000;
}

.navbar-toggler:hover {
    background-color: #000000 !important;
    color: #fafafa;
}

.fa-bars {
    padding-top: 5px;
}

.dropdown-item:hover {
    color: #fafafa;
    font-weight: bold;
}

.brand-logo:hover {
    color: #2576da;
}

.in-suitcase {
    color: #da8925;
    font-size: 1.3rem;
}

.user-favourites {
    color: #ef1018;
}

/***********************Cards*/

.card:hover {
    box-shadow: 5px 6px 6px 2px rgba(97, 95, 95, 0.6);
}

.card {
    border: 2px solid rgba(0, 0, 0, .125);
    box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
}

.review-card {
    height: 18rem;
    overflow: auto;
}

/***********************Buttons*/

.btn-div {
    display: flex;
}

.btn-next,
.btn-more {
    background-color: #da8925;
    border-radius: 0.5rem;
    color: #fafafa;
    margin: 0.5rem auto;
    border: 0.2rem solid #000000;
    font-family: 'Acme', sans-serif;
}

.btn-next:hover,
.btn-more:hover {
    background-color: #2576da;
    color: #fafafa;
    transition: ease-in-out all .4s;
    box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
}

.search-btn:hover,
.btn-dropdown:hover {
    background-color: #2576da;
    color: #fafafa;
}

.btn-dropdown {
    background-color: #000000;
    color: #fafafa;
    text-transform: uppercase;
    font-size: 1rem;
    font-weight: 600;
    margin: 1rem;
    width: 15rem;
}

.btn-bottom {
    position: absolute;
    bottom: 0;
    right: 10px;
}

.btn-more i {
    display: block;
}

.add-to-favourites i {
    font-size: 2rem;
    margin-left: 80%;
    color: #fafafa;
}

.add-to-favourites {
    background-color: #da8925;
    border: 2px solid #000000;
}

.add-to-favourites:hover {
    background-color: #000000;
}

.add-to-favourites i:hover {
    color: #ef1018;
}


.btn-book {
    position: fixed;
    top: 20%;
    left: 79%;
    width: 10rem;
    font-size: 1.8rem;
    z-index: 1;
}

.btn-sold {
    position: absolute;
    background-color: #000000;
    opacity: 1 !important;
}

.btn-favourite {
    position: absolute;
}

.btn-favourite i {
    margin: 0px;
}

.btn-submit {
    background-color: #039b2b;
}


.modal-btn {
    width: 100%;
    text-align: center;
    display: flex;
    justify-content: space-between;
}

.modal-btn button {
    display: inline-block;
}

.modal-btn .btn-secondary {
    position: absolute;
    left: 5%;
}

.modal-btn .btn-secondary {
    background-color: #ef1018;
    color: #fafafa;
    border: 2px solid #000000;
}


.add-booking-btn:hover,
.modal-btn .btn-secondary:hover {
    background-color: #2576da;
    color: #fafafa;
}


.modal-header {
    background-color: #da8925;
    color: #fafafa;
}

.btn-close {
    background-color: #fafafa;
}

.btn-left {
    position: absolute;
    left: 4%;
}

.btn-right {
    position: absolute;
    right: 5%;
}

.trip-link {
    text-decoration: none;
    color: #000000;
}

.trip-link h4:hover,
.trip-link h5:hover {
    color: #fafafa;
}

/**********************Icons*/

/* from Bulma */
/* css for fontawesome to create consistency */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

/**********************404.html*/

.error-container {
    margin-top: 3.2rem;
    margin-bottom: -1rem;
}

.error {
    background: url("https://cdn.pixabay.com/photo/2019/02/04/12/18/winter-3974511_1280.jpg") no-repeat center center fixed;
    background-size: cover;
    height: 80vh;
}

.error h1 {
    position: absolute;
    top: 30%;
    left: 10%;
}

.error a {
    position: absolute;
    top: 50%;
    left: 10%;
}

/**********************500.html*/

.error-500 {
    background: url("https://cdn.pixabay.com/photo/2017/08/01/22/38/flash-2568381_1280.jpg") no-repeat center center fixed;
    background-size: cover;
    height: 80vh;
}

.error-500 h1 {
    position: absolute;
    top: 30%;
    left: 10%;
}

.error-500 a {
    position: absolute;
    top: 50%;
    left: 10%;
}

/**********************View Availability*/

.booking-form {
    margin-top: 5rem;
    border: 5px #2576da solid;
    padding: 5rem;
    background-color: #da8925;
    border-radius: 5px;
}

.btn-div {
    display: flex;
    justify-content: space-between;
}

.add-booking-btn {
    background-color: #000000;
    color: #fafafa;
    text-align: center;
    border: 2px solid #000000;
}

/**********************Bag*/

.decrease-quantity-child,
.decrease-quantity {
    background-color: #ef1018;
    color: #fafafa;
    border-radius: 5px;
    border: 1px solid black;
    z-index: 0 !important;
}

.add-quantity {
    background-color: #039b2b;
    color: #fafafa;
    border-radius: 5px;
    border: 1px solid black;
    z-index: 0 !important;
}


/*****************Add_to_bag*/

.cancel-btn {
    background-color: #ef1018;
}

.add-btn {
    background-color: #039b2b;
}

.add-btn:hover,
.cancel-btn:hover {
    background-color: #000000;
}

/*****************Toasts*/

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 999999999999;
}

.toast-header {
    width: 100%;
}

.toast-success {
    background-color: #039b2b;
    color: #fafafa;
}

.toast-error {
    background-color: #ef1018;
    color: #fafafa;
}

.toast-info {
    background-color: #2576da;
    color: #fafafa;
}

.toast-warning {
    background-color: #da8925;
    color: #fafafa;
}

/****************Date Picker*/

.ui-datepicker-days-cell-over  > .ui-state-default {
    border: 1px solid #000000 !important;
    background-color: #da8925 !important;
    color: #000000 !important;
}


.ui-datepicker-header {
    border: 1px solid #fafafa !important;
    background: #000000 !important;
    color: #fafafa !important;
    font-weight: bold;
}

.ui-datepicker-header a {
    background-color: #fafafa;
}

.ui-state-active,
.ui-widget-content .ui-state-active,
.ui-widget-header .ui-state-active,
a.ui-button:active,
.ui-button:active,
.ui-button.ui-state-active:hover {
    border: 1px solid #000000 !important;
    background: #2576da !important;
}

.update-link {
    background-color: #039b2b;
    padding: 3px;
    border-radius: 5%;
    color: #fafafa !important;
}

.remove-item {
    background-color: #ef1018;
    padding: 3px;
    border-radius: 5%;
    color: #fafafa !important;
}

.remove-item:hover,
.update-link:hover {
    background-color: #000000;
    color: #fafafa;
}

/****************Login Page*/

.verification-div {
    font-size: 1.3rem;
    font-weight: 600;
}

.verification-div p strong {
    color: #2576da;
}



.trip-link strong:hover {
    color: #fafafa;
}

/**************Update Personal Info*/

.img-thumbnail {
    border: none !important;
    background-color: transparent;
    object-fit: cover;
}

/**********************Footer*/

footer {
    margin-top: auto;
    background: #000000;
    flex-shrink: 0;
}



.footer-link {
    text-decoration: none;
    text-transform: uppercase;
    text-shadow: 2px 2px #000000;
    font-weight: 600;
    font-size: 1.2rem;
}

.social-icons {
    list-style-type: none;
    list-style: none;
    margin: 0;
    padding: 0;
    text-align: center;
    width: 100%;
    padding-bottom: 0.2rem;
}

.social-icons li {
    display: inline-block;
    position: relative;
    padding: 0rem 0.8rem;
    color: #fafafa;
    font-size: 1.5rem;
    box-shadow: 1.5rem .5rem .8rem rgba(0, 0, 0, 0.8);
}

.social-icons li a {
    color: #fafafa;
}

.trip-link h4:hover,
.trip-link strong:hover,
.trip-link h5:hover,
.category-heading:hover,
.nav-item a:hover,
.main-logo-link:hover,
.navbar-toggler:hover,
.social-icons li a:hover {
    background-color: rgba(97, 95, 95, 0.6);
    border-radius: 5%;
    padding: 0.5rem !important;
    transition: ease-in-out all .2s;
}

.copy-rights-text {
    color: #fafafa;
    margin: 1rem auto;
}

/************************Profile*/

.profile-img {
    width: 10rem;
    height: 10rem;
    margin: 1rem auto;
}

/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (max-width: 1200px) {

    .update-link,
    .remove-item {
        font-size: 0.9rem;
    }

}

@media (max-width: 320px) {

    .nav-link {
        padding: 0px;
    }

    ul {
        padding: 0px;
    }

    .btn-checkout-mobile {
        left: 41% !important;
        top: 34% !important;
    }

    .btn-dropdown {
        width: auto;
    }

    .mobile-icon-menu li {
        padding-left: 10px;
    }

    .main-nav {
        width: auto !important;
    }
}

@media (max-width: 420px) {

    header {
        height: 15vh;
    }

    .btn-checkout {
        display: none;
    }

    .btn-checkout-mobile {
        position: fixed;
        left: 55%;
        top: 26%;
        z-index: 99999999;
        width: auto;
    }

    .footer-row {
        margin-top: 1rem;
        margin-left: 0rem;
        margin-bottom: 0rem;
        margin-right: 0rem;
        padding: 0rem;
    }

    .main-nav {
        width: auto !important;
    }

    .btn-favourite i {
        font-size: 1.5rem;
        position: relative;
    }

    .btn-book {
        left: 70% !important;
        width: 7rem;
        font-size: 1rem;
        top: 25% !important;
    }

    .cancel-btn,
    .add-btn {
        width: auto;
        margin: 0.5rem;
    }
}

@media (max-width: 768px) {

    .form-group {
        width: 12rem;
    }

    .main-nav {
        position: unset;
        width: 100%;
    }
    
    #children_tickets,
    #total_adults {
        width: 5rem;
        border: 1px solid #000000;
    }

}

